# worktrunk

./: .typos.toml  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.claude/rules/: cli-output-formatting.md  output-system-architecture.md
.config/: lychee.toml  wt.example.toml  wt.toml
.github/workflows/: ci.yaml  release.yaml
benches/: CLAUDE.md  list.rs
dev/: config.example.toml
dev/wt-demo/: demo.tape
docs/: CLAUDE.md
docs/content/: claude-code.md  config.md  hook.md  hooks.md  list.md  llm-commits.md  merge.md  quickstart.md  remove.md  select.md  step.md  switch.md  tips-patterns.md  why-worktrunk.md
docs/demos/: .gitignore  build  review.html
docs/sass/: custom.scss
docs/static/: code-copy.js
docs/templates/: base.html  index.html  macros.html  page.html
src/: cli.rs  config.rs  config_template_test.rs  git.rs  lib.rs  llm.rs  main.rs  md_help.rs  output.rs  shell.rs  styling.rs
src/cli/: mod.rs
src/commands/: CLAUDE.md  beta.rs  command_executor.rs  completion.rs  config.rs  configure_shell.rs  context.rs  dev.rs  merge.rs  mod.rs  project_config.rs  repository_ext.rs  select.rs  standalone.rs  worktree.rs
src/config/: expansion.rs  project.rs  user.rs
src/git/: error.rs
src/output/: handlers.rs
src/snapshots/: worktrunk__config_template_test__snapshot_complex_templates.snap  worktrunk__config_template_test__snapshot_shell_escaping_paths.snap  (+2 more)
templates/: bash.sh  elvish.elv  fish.fish  nushell.nu  powershell.ps1  xonsh.xsh  zsh.zsh
tests/: git_error_display.rs
tests/helpers/dev-detach/: Cargo.toml
(+317 files in other folders)
