# Test helper binary for TTY isolation in shell integration tests.
# This is a workspace member (not a separate workspace) to share target/ and Cargo.lock.
# Never published to crates.io (publish = false) - only used during development and CI.
[package]
name = "dev-detach"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Only needed on Unix for setsid() functionality
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = ["process", "signal"] }

[lints.rust]
# dev-detach uses nix crate's safe wrappers, no direct unsafe code
unsafe_code = "forbid"
